--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -913,7 +913,7 @@ body.modal-open {
   flex-direction: row; /* Default is side-by-side (desktop/tablets) */
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 /* Thumbnails (default: vertical for desktop/tablets) */
@@ -921,14 +921,13 @@ body.modal-open {
   display: flex;
   flex-direction: column; /* Vertically aligned thumbnails by default */
   gap: 10px;
-  padding: 10px;
+  padding: 8px;
 }
 
 /* Thumbnail wrapper */
 .thumbnail-wrapper {
   position: relative;
   cursor: pointer;
-  padding: 10px;
 }
 
 /* Main media container */
@@ -936,22 +935,24 @@ body.modal-open {
   width: 400px;
   height: 400px;
   overflow: hidden;
-  cursor: zoom-in;
-  margin-bottom: 10px;
-  padding: 10px;
+  /* cursor: zoom-in; */
+  /* margin-bottom: 4px; */
+  /* padding: 6px; */
+  /* background: #cde8f1; */
+
 }
 
 /* Main image or video */
 .main-media {
-  width: 100%;
-  height: 100%;
+  width: 99%;
+  height: 99%;
   object-fit: cover;
 }
 
 /* Thumbnails */
 .thumbnail-image {
-  width: 80px;
-  height: 80px;
+  width: 75px;
+  height: 75px;
   object-fit: cover;
   border: 2px solid transparent;
   transition: border 0.3s ease;
@@ -973,7 +974,7 @@ body.modal-open {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 24px;
+  font-size: 18px;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
@@ -981,9 +982,9 @@ body.modal-open {
 }
 
 /* Hover zoom effect for the main image */
-.main-media-container:hover .main-media {
+/* .main-media-container:hover .main-media {
   transform: scale(1.2);
-}
+} */
 
 /* Responsive styling for mobile */
 @media (max-width: 768px) {
@@ -994,7 +995,7 @@ body.modal-open {
 
   .thumbnails {
     flex-direction: row; /* Change thumbnails to horizontal */
-    gap: 5px;
+    gap: 3px;
     justify-content: center;
     width: 100%;
   }
@@ -1010,4 +1011,3 @@ body.modal-open {
     height: 300px;
   }
 }
-
