--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -932,21 +932,21 @@ body.modal-open {
 
 /* Main media container */
 .main-media-container {
-  width: 400px;
-  height: 400px;
+  width: 355px;
+  height: 350px;
   overflow: hidden;
   /* cursor: zoom-in; */
   /* margin-bottom: 4px; */
-  /* padding: 6px; */
+  padding: 4px;
   /* background: #cde8f1; */
-
 }
 
 /* Main image or video */
 .main-media {
-  width: 99%;
-  height: 99%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  /* background: #cde8f1; */
 }
 
 /* Thumbnails */
