--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -976,7 +976,7 @@ body.modal-open {
   transform: translate(-50%, -50%);
   font-size: 18px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   border-radius: 50%;
   padding: 10px;
 }
