--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -913,15 +913,15 @@ body.modal-open {
   flex-direction: row; /* Default is side-by-side (desktop/tablets) */
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 6px;
 }
 
 /* Thumbnails (default: vertical for desktop/tablets) */
 .thumbnails {
   display: flex;
   flex-direction: column; /* Vertically aligned thumbnails by default */
-  gap: 10px;
-  padding: 8px;
+  gap: 6px;
+  padding: 2px;
 }
 
 /* Thumbnail wrapper */
@@ -932,31 +932,34 @@ body.modal-open {
 
 /* Main media container */
 .main-media-container {
-  width: 355px;
-  height: 350px;
+  width: 82%;
+  height: auto;
   overflow: hidden;
   /* cursor: zoom-in; */
   /* margin-bottom: 4px; */
-  padding: 4px;
+  padding: 12px;
+  /* object-fit: cover; */
   /* background: #cde8f1; */
 }
 
 /* Main image or video */
 .main-media {
-  width: 100%;
-  height: 100%;
+  /* width: 80%;
+  height: 80%; */
   object-fit: cover;
   /* background: #cde8f1; */
+  padding: 5px;
 }
 
 /* Thumbnails */
 .thumbnail-image {
-  width: 75px;
-  height: 75px;
+  width: 65px;
+  height: auto;
   object-fit: cover;
   border: 2px solid transparent;
   transition: border 0.3s ease;
-  padding: 5px;
+  /* background: #cde8f1; */
+  padding: 3px;
 }
 
 /* Highlight the active thumbnail */
@@ -1007,7 +1010,13 @@ body.modal-open {
   }
 
   .main-media-container {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid #000; */
+    margin: 10px;
+    /* background: #cde8f1; */
   }
 }
